# Avalon

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
resources/: engine.config
resources/shaders/: default.glsl  quads.glsl  render.glsl  text.glsl
resources/spritesheets/: backgrounds.json  characters.json
resources/textures/: blocks.json  textures.json
scenes/editor/: map.json
src/: Avalon.hpp  Shader.h  Window.h  main.cpp
src/avalon/components/: AnimationComponent.hpp  AudioComponent.hpp  RenderComponent.hpp
src/avalon/core/: Application.cpp  Application.hpp  Core.cpp  Core.hpp  EntryPoint.hpp  ImGuiLayer.hpp  InputListeners.hpp  Log.cpp  Log.hpp  Utils.hpp  Window.hpp
src/avalon/editor/: LevelEditorScene.hpp
src/avalon/entity/: Actor.cpp  Actor.hpp  Component.hpp  Entity.hpp  Registry.cpp  Registry.hpp
src/avalon/event/: InputListeners.hpp
src/avalon/imgui/: ImGuiLayer.hpp
src/avalon/logic/: AssetPool.hpp  Component.hpp  GameObject.hpp  Layer.hpp  Object.hpp  Registry.hpp  Scene.hpp  Transform.hpp
src/avalon/render/: Camera.hpp  ObjectRenderer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
src/avalon/renderer/: Camera.hpp  Color.hpp  Font.hpp  FrameBuffer.hpp  QuadRenderBatch.hpp  RenderBatch.hpp  Renderer.hpp  Shader.hpp  Sprite.hpp  TextRenderBatch.hpp  Texture.hpp  Transform.hpp
src/avalon/scene/: Component.hpp  GameLayer.hpp  ImGuiLayer.hpp  Layer.hpp  Scene.hpp  SceneSerializer.hpp
src/avalon/utils/: AssetPool.hpp  PlatformUtils.cpp  PlatformUtils.hpp  ResourceBundle.hpp  Time.hpp
src/game/: Game.cpp  LevelEditorScene.hpp  LevelScene.hpp
